--- a/css/sample.scss
+++ b/css/sample.scss
@@ -7,15 +7,16 @@ html {
 
 // 自動でrem数値へ変更するための関数
 // @include fontsize(num); で利用
-@mixin fontsize($size: 24, $base: 10) {
+@mixin fontsize($size: 24) {
 	font-size: $size + px;
-	font-size: ($size / $base) * 1rem;
+	font-size: ($size / 10) * 1rem;
 }
 
 $ja_font: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", メイリオ, Verdana, "MS Pゴシック", sans-serif;
 $blue1: #42b9d0;
 $blue2: #339fd1;
 $gray_blue: #eaf2f4;
+
 
 header
 {
@@ -29,7 +30,6 @@ header
 
 	// メディアクエリ：ブレイクポイント550px
 	// SP表示のとき、2カラム表示になるように調整
-	//
 	@media(max-width: 550px) {
 		.logo { width: 190px; }
 
@@ -50,6 +50,11 @@ header
 		padding: 0;
 		display: none; //タップされるまではメニュー内容は非表示
 
+		// SPビューのハンバーガーメニュークリック時の動作にて、
+		// メニュー表示 .sp_navi_li の重なり順序の優先順位を上げる
+		// z-indexの数値が高いほど重なり順は前面になる
+		z-index: 100;
+
 		li {
 			list-style: none;
 			margin: 0;
@@ -65,18 +70,352 @@ header
 		} //li end
 	} //.sp_navi_li end
 
-	// PCビューではsp_naviクラスは非表示にする
+	// PCビューにおける表示調整
 	@media(min-width: 551px) {
+		// sp_naviクラスは非表示
 		.sp_navi {
 			display: none;
 		}
+
+		//SPビューのpadding上書き
+		#header_in {
+			padding: 15px 0 10px 0;
+		}
+
+		.pc_navi_li {
+			margin: 0;
+			padding: 0;
+
+			li {
+				list-style: none;
+				margin: 5px 0 0 0;
+				padding: 0;
+
+				a {
+					color: #626262;
+					text-decoration: none;
+					font-weight: bold;
+					@include fontsize(14);
+					float: left;
+					padding-right: 10px;
+				}
+
+				a:hover {
+					color: $blue1;
+				}
+
+			} // li end
+
+			li.navi_toppage a {
+				//retina_bg(Retina画面表示用背景)
+				background-repeat: no-repeat;
+				display: inline-block;
+				line-height: 40px;
+				padding-left: 50px;
+
+					background-image: url("../images/top/navi_top.png");
+					background-size: 40px 40px;
+
+				@media screen and (-webkit-min-device-pixel-ratio: 2),(min-resolution: 2dppx)
+				{
+					background-image: url("../images/top/navi_top@2x.png");
+				}
+			} // li.navi_toppage a  end
+
+			li.navi_news a {
+				//retina_bg(Retina画面表示用背景)
+				background-repeat: no-repeat;
+				display: inline-block;
+				line-height: 40px;
+				padding-left: 50px;
+
+					background-image: url("../images/top/navi_news.png");
+					background-size: 40px 40px;
+
+				@media screen and (-webkit-min-device-pixel-ratio: 2),(min-resolution: 2dppx)
+				{
+					background-image: url("../images/top/navi_news@2x.png");
+				}
+			} // li.navi_news a  end
+
+			li.navi_company a {
+				//retina_bg(Retina画面表示用背景)
+				background-repeat: no-repeat;
+				display: inline-block;
+				line-height: 40px;
+				padding-left: 50px;
+
+					background-image: url("../images/top/navi_company.png");
+					background-size: 40px 40px;
+
+				@media screen and (-webkit-min-device-pixel-ratio: 2),(min-resolution: 2dppx)
+				{
+					background-image: url("../images/top/navi_company@2x.png");
+				}
+			} // li.navi_company a  end
+
+		} // .pc_navi_li  end
+
 	} //min-width: 551px end
 
-	// PCビューではさらにPC用メニューは非表示にする
+	// スマホビューではさらにPC用メニューは非表示にする
 	@media(max-width: 550px) {
 		.pc_navi {
 			display: none;
 		}
-	} //max-width: 550px end
+	} //max-width: 550px::end
 
-} //header end
+} //header::end
+
+
+//カバーエリア
+#cover_area {
+
+	text-align: center;
+	padding: 80px 0;
+
+	//retina_bg
+	background-image: url("../images/top/cover.jpg");
+	background-size: cover;
+
+	@media screen and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx)
+	{
+		background-image: url("../images/top/cover@2x.jpg");
+	}
+
+	// メディアクエリ:PCビューの調整
+	@media(min_width: 551px) {
+		text-align: left;
+		height: 420px;
+		padding: 0;
+
+		img {
+			margin-top: 180px;
+			margin-left: 70px;
+		}
+	} // min-width: 551px::end
+
+} // #cover_area::end
+
+
+//サービスエリア
+#service_area {
+
+	padding-top: 20px;
+
+	@media(min-width: 551px) {
+		padding-top: 30px;
+	}
+	// min-width: 551px::end
+
+	.columns {
+
+		color: #626262;
+
+		.service_title {
+			@include fontsize(18);
+			font-weight: bold;
+			margin-top: 8px;
+		} //.service_title::end
+
+		p {
+			@include fontsize(15);
+			margin-top: 10px;
+		} // .columns.p::end
+
+		@media(min-width: 551px) {
+
+			.service_title {
+				@include fontsize(16);
+			}
+			p {
+				@include fontsize(13);
+			}
+		} // min-width: 551px::end
+
+	} // .columns::end
+
+} // #service_area::end
+
+
+//ニュースエリア
+#news_area {
+
+	background-color:$gray_blue;
+
+	@media(min-width: 551px) {
+
+		.container {
+			padding: 0px 10% 50px 10%;
+		} //.container::end
+	} // min-width:551px::end
+
+	.news_title {
+		text-align: center;
+		@include fontsize(26);
+		color: $blue1;
+		padding: 15px 0 10px 0;
+		font-weight: bold;
+		letter-spacing: 0.2rem;
+	} // .news_title::end
+
+	.news_lists {
+
+		li {
+			list-style: none;
+			@include fontsize(15);
+
+			span {
+				color: $blue1;
+				font-weight: bold;
+				display: block;
+				margin-bottom: 3px;
+			} // span::end
+		} // li::end
+
+	} // .news_lists::end
+
+	@media(min-width: 551px) {
+
+		.news_title {
+			@include fontsize(22);
+			padding: 50px 0 41px 0;
+		} // .news_title::end
+
+		.news_lists {
+
+			li {
+				@include fontsize(14);
+				margin-bottom: 20px;
+
+				span {
+					display: inline;
+					margin-bottom: 0px;
+				} // span::end
+			} // li::end
+
+		} // .news_lists::end
+
+	} // min-width:551px::end
+
+} // #news_area::end
+
+
+// フッター
+footer {
+
+	background-color: $blue1;
+	color: #fff;
+	padding-top: 20px;
+
+	@media(max-width: 550px) {
+
+		.container {
+			margin: 0;
+			padding: 0;
+		}
+
+		.sp {
+			padding: 0 6%;
+			//margin 上下は0、左右はauto
+			margin: 0 auto;
+		}
+
+		.foot_navi {
+			margin-top: 20px;
+
+			li {
+				list-style: none;
+				margin-bottom: 1px;
+
+				a {
+					color: $blue1;
+					background-color: $gray_blue;
+					display: block;
+					text-align: center;
+					font-weight: bold;
+					text-decoration: none;
+					@include fontsize(16);
+					padding: 16px 0;
+				} // .foot_navi.li.a::end
+			} // .foot_navi.li::end
+		} // .foot_navi::end
+
+	} // max-width:550px::end
+
+
+	.foot_address {
+		@include fontsize(16);
+		padding-top: 10px;
+	}
+
+	.copy {
+		text-align: center;
+		@include fontsize(11);
+		color: #b2e1ea;
+	}
+
+
+	@media(min-width: 551px) {
+
+		padding-top: 30px;
+
+		.foot_address {
+			padding: 0;
+			@include fontsize(12);
+		}
+
+		.foot_navi {
+			float: right;
+
+			li {
+				list-style: none;
+
+				background-repeat: no-repeat;
+				background-position: left center;
+
+				display: inline-block;
+				float: left;
+				margin-right: 10px;
+				@include fontsize(11);
+
+				//retina_bg:Retina画像用表示
+				background-image: url("../images/top/foot_arroehead.png");
+				background-size: 4px 6px;
+
+				@media screen and (-webkit-min-device-pixel-ratio: 2),
+													(min-resolution: 2dppx)
+				{
+					background-image: url("../images/top/foot_arroehead@2x.png");
+
+				} //retina_bg::end
+
+			} // li::end
+
+			a {
+				color: white;
+				padding-left: 10px;
+				text-decoration: none;
+			} // a::end
+
+			a.hover {
+				color: $gray_blue;
+			} // a.hover::end
+
+		} // .foot_navi::end
+
+		.copy {
+			margin-top: 30px;
+		}
+
+	}
+	// min-width:551px::end
+
+}
+// footer::end
+
+// ロゴ画像にh1タグを付与したことによる表示崩れを防ぐ
+h1 {
+	margin: 0;
+	padding: 0;
+}
