--- a/css/sample.css
+++ b/css/sample.css
@@ -315,4 +315,144 @@ h1 {
   padding: 0;
 }
 
+#sub_cover {
+  padding: 40px 0;
+  background-image: url("../images/news/sub_cover.jpg");
+  background-size: cover;
+}
+@media (min-width: 551px) {
+  #sub_cover {
+    padding: 80px 0;
+  }
+}
+@media screen and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
+  #sub_cover {
+    background-image: url("../images/news/sub_cover@2x.jpg");
+  }
+}
+#sub_cover h2 {
+  text-align: center;
+  color: white;
+  font-size: 16px;
+  font-size: 1.6rem;
+  font-weight: bold;
+  margin: 0;
+  letter-spacing: 0.2rem;
+}
+@media (min-width: 551px) {
+  #sub_cover h2 {
+    text-align: center;
+    color: white;
+    font-size: 32px;
+    font-size: 3.2rem;
+    font-weight: bold;
+    margin: 0;
+    letter-spacing: 0.2rem;
+  }
+}
+
+#contents {
+  padding-top: 20px;
+}
+@media (min-width: 551px) {
+  #contents {
+    padding-top: 35px;
+    padding-bottom: 70px;
+  }
+}
+#contents #main {
+  padding-right: 20px;
+}
+#contents #main h2 {
+  color: #42b9d0;
+  border-bottom: 3px solid #42b9d0;
+  font-size: 15px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding-bottom: 15px;
+}
+@media (min-width: 551px) {
+  #contents #main h2 {
+    font-size: 20px;
+    font-size: 2rem;
+    padding-bottom: 20px;
+  }
+}
+#contents #main h2 .company_title {
+  margin-bottom: 0px;
+}
+#contents #main .news_li {
+  font-size: 15px;
+  font-size: 1.5rem;
+}
+#contents #main .news_li li {
+  list-style: none;
+}
+@media (min-width: 551px) {
+  #contents #main .news_li li {
+    list-style: none;
+    padding-bottom: 5px;
+  }
+}
+#contents #main .news_li li span {
+  color: #42b9d0;
+  display: block;
+  font-weight: bold;
+  margin-bottom: 3px;
+}
+@media (min-width: 551px) {
+  #contents #main .news_li li span {
+    display: inline-block;
+    margin-bottom: 0;
+    padding-right: 10px;
+  }
+}
+#contents #main th, #contents #main td {
+  padding: 20px 0;
+  color: #626262;
+  font-size: 14px;
+  font-size: 1.4rem;
+}
+#contents #sidebar {
+  padding-bottom: 20px;
+}
+@media (max-width: 550px) {
+  #contents #sidebar .pc_sidemenu {
+    display: none;
+  }
+}
+#contents #sidebar .pc_sidemenu h3 {
+  color: #42b9d0;
+  font-size: 14px;
+  font-size: 1.4rem;
+  letter-spacing: 0.2rem;
+  font-weight: bold;
+  background-color: #f3f9fb;
+  padding: 15px;
+  margin-bottom: 0px;
+}
+#contents #sidebar .pc_sidemenu li {
+  list-style: none;
+  display: block;
+  border-bottom: 1px solid #e5e5e5;
+  background-repeat: no-repeat;
+  background-position: 8px center;
+  margin-bottom: 0px;
+  padding: 10px 10px 10px 20px;
+  background-image: url("../images/news/side_arrow.png");
+  background-size: 4px 8px;
+}
+@media screen and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
+  #contents #sidebar .pc_sidemenu li {
+    background-image: url("../images/news/side_arrow@2x.png");
+  }
+}
+#contents #sidebar .pc_sidemenu li a {
+  color: #339fd1;
+  text-decoration: none;
+}
+#contents #sidebar .pc_sidemenu li a.hover {
+  color: #42b9d0;
+}
+
 /*# sourceMappingURL=sample.css.map */
