--- a/css/sample.scss
+++ b/css/sample.scss
@@ -30,14 +30,16 @@ header
 
 	// メディアクエリ：ブレイクポイント550px
 	// SP表示のとき、2カラム表示になるように調整
-	@media(max-width: 550px) {
-		.logo { width: 190px; }
-
+	@media (max-width: 550px) {
+		.logo {
+			width: 190px;
+		}
 		.navi {
 			width: 40px;
 			float: right;
 		}
-	} // @media ::close
+	}
+	// @media  close
 
 	.sp_navi_li {
 		width: 180px;
@@ -48,7 +50,8 @@ header
 		background: white;
 		margin: 0;
 		padding: 0;
-		display: none; //タップされるまではメニュー内容は非表示
+		display: none;
+		//タップされるまではメニュー内容は非表示
 
 		// SPビューのハンバーガーメニュークリック時の動作にて、
 		// メニュー表示 .sp_navi_li の重なり順序の優先順位を上げる
@@ -66,12 +69,15 @@ header
 				border-bottom: 1px solid #eee;
 				font-size: 14px;
 				text-decoration: none;
-			} //a ::close
-		} //li ::close
-	} //.sp_navi_li ::close
+			}
+			// a  close
+		}
+		// li close
+	}
+	// .sp_navi_li close
 
 	// PCビューにおける表示調整
-	@media(min-width: 551px) {
+	@media (min-width: 551px) {
 		// sp_naviクラスは非表示
 		.sp_navi {
 			display: none;
@@ -104,7 +110,8 @@ header
 					color: $blue1;
 				}
 
-			} // li ::close
+			}
+			// li  close
 
 			li.navi_toppage a {
 				//retina_bg(Retina画面表示用背景)
@@ -112,15 +119,15 @@ header
 				display: inline-block;
 				line-height: 40px;
 				padding-left: 50px;
-
-					background-image: url("../images/top/navi_top.png");
-					background-size: 40px 40px;
+				background-image: url("../images/top/navi_top.png");
+				background-size: 40px 40px;
 
 				@media screen and (-webkit-min-device-pixel-ratio: 2),(min-resolution: 2dppx)
 				{
 					background-image: url("../images/top/navi_top@2x.png");
 				}
-			} // li.navi_toppage a  ::close
+			}
+			// li.navi_toppage a  close
 
 			li.navi_news a {
 				//retina_bg(Retina画面表示用背景)
@@ -136,7 +143,8 @@ header
 				{
 					background-image: url("../images/top/navi_news@2x.png");
 				}
-			} // li.navi_news a  ::close
+			}
+			// li.navi_news a  close
 
 			li.navi_company a {
 				//retina_bg(Retina画面表示用背景)
@@ -152,21 +160,25 @@ header
 				{
 					background-image: url("../images/top/navi_company@2x.png");
 				}
-			} // li.navi_company a  ::close
+			}
+			// li.navi_company a  close
 
-		} // .pc_navi_li  ::close
+		}
+		// .pc_navi_li  close
 
-	} //min-width: 551px ::close
+	}
+	//min-width: 551px  close
 
 	// スマホビューではさらにPC用メニューは非表示にする
 	@media(max-width: 550px) {
 		.pc_navi {
 			display: none;
 		}
-	} //max-width: 550px::::close
+	}
+	//max-width: 550px  close
 
-} //header::::close
-
+}
+//header  close
 
 //カバーエリア
 #cover_area {
@@ -184,7 +196,7 @@ header
 	}
 
 	// メディアクエリ:PCビューの調整
-	@media(min_width: 551px) {
+	@media (min-width: 551px) {
 		text-align: left;
 		height: 420px;
 		padding: 0;
@@ -193,9 +205,11 @@ header
 			margin-top: 180px;
 			margin-left: 70px;
 		}
-	} // min-width: 551px::::close
+	}
+	// min-width: 551px  close
 
-} // #cover_area::::close
+}
+// #cover_area close
 
 
 //サービスエリア
@@ -206,7 +220,7 @@ header
 	@media(min-width: 551px) {
 		padding-top: 30px;
 	}
-	// min-width: 551px::::close
+	// min-width: 551pxclose
 
 	.columns {
 
@@ -216,7 +230,8 @@ header
 			@include fontsize(18);
 			font-weight: bold;
 			margin-top: 8px;
-		} //.service_title::::close
+		}
+		//.service_title  close
 
 		p {
 			@include fontsize(15);
@@ -231,11 +246,14 @@ header
 			p {
 				@include fontsize(13);
 			}
-		} // min-width: 551px::close
+		}
+		// min-width: 551px  close
 
-	} // .columns::close
+	}
+	// .columns  close
 
-} // #service_area::close
+}
+// #service_area::close
 
 
 //ニュースエリア
@@ -247,8 +265,10 @@ header
 
 		.container {
 			padding: 0px 10% 50px 10%;
-		} //.container::close
-	} // min-width:551px::close
+		}
+		//.container	close
+	}
+	// min-width:551px	close
 
 	.news_title {
 		text-align: center;
@@ -257,7 +277,8 @@ header
 		padding: 15px 0 10px 0;
 		font-weight: bold;
 		letter-spacing: 0.2rem;
-	} // .news_title::close
+	}
+	// .news_title	close
 
 	.news_lists {
 
@@ -270,17 +291,21 @@ header
 				font-weight: bold;
 				display: block;
 				margin-bottom: 3px;
-			} // span::close
-		} // li::close
+			}
+			// span: ;close
+		}
+		// li  close
 
-	} // .news_lists::close
+	}
+	// .news_lists  close
 
 	@media(min-width: 551px) {
 
 		.news_title {
 			@include fontsize(22);
 			padding: 50px 0 41px 0;
-		} // .news_title::close
+		}
+		// .news_title  close
 
 		.news_lists {
 
@@ -291,14 +316,19 @@ header
 				span {
 					display: inline;
 					margin-bottom: 0px;
-				} // span::close
-			} // li::close
+				}
+				// span  close
+			}
+			// li  close
 
-		} // .news_lists::close
+		}
+		// .news_lists  close
 
-	} // min-width:551px::close
+	}
+	// min-width:551px  close
 
-} // #news_area::close
+}
+// #news_area  close
 
 
 // フッター
@@ -337,11 +367,15 @@ footer {
 					text-decoration: none;
 					@include fontsize(16);
 					padding: 16px 0;
-				} // .foot_navi.li.a::close
-			} // .foot_navi.li::close
-		} // .foot_navi::close
+				}
+				// .foot_navi.li.a  close
+			}
+			// .foot_navi.li  close
+		}
+		// .foot_navi  close
 
-	} // max-width:550px::close
+	}
+	// max-width:550px  close
 
 
 	.foot_address {
@@ -388,21 +422,26 @@ footer {
 				{
 					background-image: url("../images/top/foot_arroehead@2x.png");
 
-				} //retina_bg::close
+				}
+				//retina_bg  close
 
-			} // li::close
+			}
+			// li  close
 
 			a {
 				color: white;
 				padding-left: 10px;
 				text-decoration: none;
-			} // a::close
+			}
+			// a  close
 
 			a.hover {
 				color: $gray_blue;
-			} // a.hover::close
+			}
+			// a.hover  close
 
-		} // .foot_navi::close
+		}
+		// .foot_navi  close
 
 		.copy {
 			margin-top: 30px;
@@ -412,7 +451,7 @@ footer {
 	// min-width:551px::close
 
 }
-// footer::close
+// footer  close
 
 // ロゴ画像にh1タグを付与したことによる表示崩れを防ぐ
 h1 {
@@ -422,7 +461,7 @@ h1 {
 
 
 // news.html
-// #sub_cover::open
+// #sub_cover  open
 #sub_cover {
 
 	padding: 40px 0;
@@ -447,13 +486,13 @@ h1 {
 	  letter-spacing: 0.2rem;
 
 		@media(min-width: 551px) {
-    	text-align:center;
-    	color:white;
-    	font-size:32px;
-    	font-size:3.2rem;
-    	font-weight:bold;
-    	margin:0;
-    	letter-spacing:0.2rem
+    	text-align: center;
+    	color: white;
+    	font-size: 32px;
+    	font-size: 3.2rem;
+    	font-weight: bold;
+    	margin: 0;
+    	letter-spacing: 0.2rem
 		}
 		// #sub_cover>h2のメディアクエリ close
 
@@ -469,34 +508,42 @@ h1 {
 #contents {
 	padding-top: 20px;
 
-	@media(min-width: 551px) {
+	@media (min-width: 551px) {
 		padding-top: 35px;
 		padding-bottom: 70px;
-	} // PCビューのメディアクエリ close
+	}
+	// PCビュー@media  close
 
 	#main {
-		padding-right: 20px;
+
+		@media(min-width: 551px) {
+			padding-right: 20px;
+		}
 
 		h2 {
 			color: #42b9d0;
-			border-bottom: 3px solid #42b9d0; //見出しの下線定義
-			font-size: 15px;
-			font-size: 1.5rem;
+			//見出しの下線定義
+			border-bottom: 3px solid #42b9d0;
+
+			@include fontsize(15);
 			font-weight: bold;
 			padding-bottom: 15px;
 
 			@media(min-width: 551px) {
 				@include fontsize(20);
 				padding-bottom: 20px;
-			} //#main>h2のメディアクエリ close
-
-			//comany.htmlで利用
-			.company_title {
-				//ボックスの下部marginを0にする
-				margin-bottom: 0px;
 			}
+			//#main>h2のメディアクエリ close
 
 		} // #main>h2 close
+
+		//company.htmlで利用
+		h2.company_title {
+			//ボックスの下部marginを0にする
+			margin-bottom: 0px;
+		}
+
+
 
 		.news_li {
 
@@ -505,24 +552,26 @@ h1 {
 			li {
 				list-style: none;
 
-				@media(min-width: 551px) {
+				@media (min-width: 551px) {
 					list-style: none;
 					padding-bottom: 5px;
 				}
 
 				span {
-					color:#42b9d0;
-					display:block;
-					font-weight:bold;
-					margin-bottom:3px;
+					color: #42b9d0;
+					display: block;
+					font-weight: bold;
+					margin-bottom: 3px;
 
-					@media(min-width: 551px) {
+					@media (min-width: 551px) {
 						display: inline-block;
 						margin-bottom: 0;
 						padding-right: 10px;
-					} //.news_li>li>spanのメディアクエリ::close
+					}
+					//.news_li>li>spanのメディアクエリ  close
 
-				} // .news_li>li>span::close
+				}
+				// .news_li>li>span  close
 
 			} // .news_li>li::close
 
@@ -533,12 +582,17 @@ h1 {
 			padding: 20px 0;
 			color: #626262;
 			@include fontsize(14);
-		} // #main th, td::close
+		}
+		// #contents>#main>th, td::close
+
+		th {
+			padding-right: 20px;
+		}
 
 	}
-	// #main::close
+	// #contents>#main  close
 
-	// #sidebar::open
+	// #sidebar  open
 	#sidebar {
 		padding-bottom: 20px;
 
@@ -581,12 +635,14 @@ h1 {
 
 				a.hover { color: #42b9d0; }
 
-			} // #sidebar>.pc_sidemenu>li::close
+			}
+			// #sidebar>.pc_sidemenu>li::close
 
+		}
+		// #sidebar>.pc_sidemenu::close
 
-		} // #sidebar>.pc_sidemenu::close
-
-	} // #sidebar::close
+	}
+	// #sidebar close
 
 }
-// #contents::close
+// #contents  close
